# rust-wasm

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.ym.lbat  rust.yml
build_out/: index.html  libmy_wasm_project.d
my-wasm-project/: Cargo.toml  LICENSE_MIT
my-wasm-project/src/: lib.rs
src/: lib.rs
