[package]
name = "we-wasm-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

wgpu = { version = "24.0", features = ["webgl"] }
# 既存の依存に加え、featureを強化する
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document", "Element", "WebGl2RenderingContext"] }
# 行列演算用
glam = "0.29"
js-sys = "0.3"
